# personal-portfolio

./: .gitignore  .projectile  readme.md
.github/workflows/: build.yml  deploy.yml  rust.yml
client/: .babelrc.js  .env  .gitignore  README.md  ecosystem.config.js  package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/src/: App.css  App.js  App.tsx  declarations.d.ts  index.css
client/src/components/: Blog.tsx  (+6 more)
crawler/: main.py
server/: Cargo.toml  Rocket.toml  ecosystem.config.js  readme.md
server/src/: main.rs
server/src/api/: blogs.rs  config.rs  health.rs  local_image.rs  media.rs  message.rs  mod.rs  note.rs  posts.rs  proxy.rs  user.rs
server/src/api/user/: user.rs
server/src/api/user/utils/: mod.rs  user_util.rs
server/src/config/: cors.rs
server/src/controller/: local_image_controller.rs  mod.rs  post_controller.rs
server/src/controller/traits/: controller.rs
server/src/database/: db_singleton.rs  mod.rs
server/src/errors/: mod.rs  user_errors.rs
server/src/models/: blog_model.rs  config_model.rs  local_image_model.rs  media_model.rs  message_model.rs  mod.rs  mongo_model.rs  note_model.rs  playlist_model.rs  post_model.rs  user_model.rs  user_session_token_model.rs
server/src/models/utils/: date_format.rs
server/src/repository/: blog_repo.rs  config_repo.rs  local_image_repo.rs  media_repo.rs  message_repo.rs  mod.rs  mongo_repo.rs  mongodb_repo.rs  note_repo.rs  post_repo.rs  user_repo.rs
server/src/utils/: local_image_util.rs  markdown.rs  markdown_util.rs  mod.rs  readme.md  user_util.rs  util.rs
(+184 files in other folders)
