[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rocket_codegen = "0.4.5"
serde = "1.0.152"
serde_derive = "1.0.116"
serde_json = "1.0.58"
rocket_contrib = "0.4.11"

