[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rocket_codegen = "0.4.5"
serde = "1.0.152"
serde_derive = "1.0.116"
serde_json = "1.0.58"
rocket_contrib = "0.4.11"
dotenv = "0.15.0"
rocket_cors = "0.5.2" # Use the latest version available
time = "0.3.17"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
bcrypt = "0.15.0"
once_cell = "1.8.0"
uuid = "1.4.1"
log = "0.4"


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 


[global.tls]
certs = "./cert.pem"
key = "./key.pem"

[development]
tls = { certs = "./certs.pem", key = "./key.pem" }
